--- a/style.css
+++ b/style.css
@@ -1,24 +1,72 @@
-@font-face {
-  font-family: "sinkin_sans400_regular";
-  src: url("SinkinSans-400Regular-webfont.eot");
-  src: url("SinkinSans-400Regular-webfont.eot?#iefix") format("embedded-opentype"), url("SinkinSans-400Regular-webfont.woff2") format("woff2"), url("SinkinSans-400Regular-webfont.woff") format("woff"), url("SinkinSans-400Regular-webfont.ttf") format("truetype"), url("SinkinSans-400Regular-webfont.svg#sinkin_sans400_regular") format("svg");
-  font-weight: normal;
-  font-style: normal;
+body {
+  font-family: "Bellota", cursive, serif;
+  font-size: 2rem;
+  width: 1100px;
+  margin: auto;
 }
+
+article {
+  background-color: #fcddf7;
+  border: 1px solid #eeb7e7;
+  box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.3);
+  margin-bottom: 20px;
+}
+
+.blocpage3 {
+  background: #f4f4f7;
+  border: 1px solid #dadaec;
+  box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.3);
+  margin-bottom: 30px;
+}
+
+.blocpage4 {
+  background: #e6e9ec;
+  border: 1px solid #ededf5;
+  box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.3);
+  margin-bottom: 30px;
+}
+
 h1 {
   color: #eeee09;
-  background: #4ce498;
+  background: #0e5532;
   text-align: center;
+  height: 100px;
+  text-transform: 3rem;
+  padding-top: 0;
 }
 
 em {
-  width: 150px;
-  color: #eeee09;
-  background: #4ce498;
+  padding-left: 100px;
+  padding-right: 100px;
 }
 
-a {
-  text-decoration: none;
+i {
+  color: #c26a6a;
+  padding-left: 400px;
+}
+
+strong {
+  font-size: 3rem;
+}
+
+h2 {
+  text-align: center;
+}
+
+section {
+  background: linear-gradient(red, blue);
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
+  border: 1px solid blanchedalmond;
+  box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.3);
+  margin-bottom: 30px;
+}
+
+h3 {
+  text-align: center;
+  background: linear-gradient(red, blue);
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
 }
 
 .element {
@@ -26,60 +74,83 @@ a {
 }
 
 .text {
-  width: 500px;
+  width: 900px;
+}
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+a {
+  text-decoration: none;
 }
 
 .box {
-  position: relative;
   border: 1px solid #f4f4f7;
   width: 300px;
   height: 300px;
-  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
+  box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.3);
+  margin: 3%;
+}
+.box:hover {
+  transform: scale(1.2);
+  transition: transform 330ms ease-in-out;
 }
 
 .box--1 {
   text-align: center;
   background-color: #eeb7e7;
   padding-top: 15%;
+  font-size: 1.5em;
 }
 
 .box--2 {
   text-align: center;
   padding-top: 15%;
   background: #f5efe7;
+  font-size: 1.5em;
 }
 
 .box--3 {
   text-align: center;
   background: #d4d4f0;
   padding-top: 15%;
+  font-size: 1.5em;
 }
 
 .box--4 {
   text-align: center;
   background: #f5efe7;
   padding-top: 15%;
-}
-
-.container {
-  display: flex;
-  justify-content: space-between;
+  font-size: 1.5em;
 }
 
 .footer {
   display: flex;
   justify-content: space-between;
-  background-color: #4ce498;
+  background-color: #0e5532;
+  height: 50px;
 }
 
-h3 {
+.mentions:hover, .contact:hover {
+  transform: scale(1.1);
+  transition: transform 330ms ease-in-out;
+}
+
+aside h3 {
   color: #eeee09;
-  background: #4ce498;
   text-align: center;
 }
 
-.mentions, .contact {
-  text-decoration: #eeee09;
+ul {
+  list-style-type: none;
+  padding-left: 0px;
+}
+
+span {
+  color: #eeee09;
 }
 
 /*# sourceMappingURL=style.css.map */
