--- a/style.scss
+++ b/style.scss
@@ -1,33 +1,80 @@
-$color-primary: rgb(76, 228, 152) ;
+$color-primary: rgb(14, 85, 50) ;
 $color-titre : rgb(238, 238, 9) ;
 $color-box1 : rgb(238, 183, 231) ;
 $width :100px;
 $padding:15%;
-@font-face {
-    font-family: 'sinkin_sans400_regular';
-    src: url('SinkinSans-400Regular-webfont.eot');
-    src: url('SinkinSans-400Regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('SinkinSans-400Regular-webfont.woff2') format('woff2'),
-         url('SinkinSans-400Regular-webfont.woff') format('woff'),
-         url('SinkinSans-400Regular-webfont.ttf') format('truetype'),
-         url('SinkinSans-400Regular-webfont.svg#sinkin_sans400_regular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-   }
+$box-shadow:5px 5px 5px 5px rgb(0 ,0 ,0 ,0.3);
+
+body
+{
+    font-family: 'Bellota', cursive, serif;
+    font-size: 2rem;
+    width: 1100px;
+    margin: auto;
+}
+article 
+{
+    background-color: rgb(252, 221, 247);
+    border: 1px solid rgb(238, 183, 231);
+    box-shadow: $box-shadow ;
+    margin-bottom: 20px;
+}
+.blocpage3
+{
+    background: rgb(244, 244, 247);
+    border: 1px solid rgb(218, 218, 236);
+    box-shadow: $box-shadow;
+    margin-bottom: 30px ;
+}
+.blocpage4
+{
+    background: rgb(230, 233, 236);
+    border: 1px solid rgb(237, 237, 245);
+    box-shadow: $box-shadow;
+    margin-bottom: 30px;
+}
 h1
 {
     color:$color-titre ;
     background: $color-primary;
     text-align: center;
+    height: $width;
+    text-transform: 3rem;
+    padding-top: 0;
 }
-em {
-    width: 150px;
-    color: $color-titre;
-    background: $color-primary;
-}
-a
+em
 {
-    text-decoration: none;
+  padding-left: 100px;
+  padding-right: 100px;  
+}
+i
+{
+    color: rgb(194, 106, 106);
+    padding-left: 400px;
+}
+strong
+{
+    font-size: 3rem;
+}
+h2
+{
+    text-align: center;
+}
+section 
+{
+    background: linear-gradient(red , blue);
+    -webkit-text-fill-color : transparent;
+    -webkit-background-clip: text;
+    border: 1px solid blanchedalmond;
+    box-shadow: 5px 5px 5px 5px rgb(0 ,0 ,0 ,0.3);
+    margin-bottom: 30px;
+}
+h3
+{
+    text-align: center;
+    background: linear-gradient(red , blue);
+    -webkit-text-fill-color : transparent;
+    -webkit-background-clip: text;
 }
 .element
 {
@@ -35,54 +82,82 @@ a
 }
 .text 
 {
-    width: 500px;
+    width: 900px;
+}
+.container 
+{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+a
+{
+    text-decoration: none;
 }
 .box
 {
-    position: relative;
     border: 1px solid rgb(244, 244, 247);
     width: 300px;
     height: 300px;
-    box-shadow: 5px 5px 5px rgba(0.3, 0.3, 0.3, 0.3) ;
+    box-shadow: 5px 5px 5px 5px rgba(0.3, 0.3, 0.3, 0.3) ;
+    margin: 3%;
+    &:hover{
+        transform: scale(1.2);
+        transition: transform 330ms ease-in-out;
+    }
 }
 .box--1 {
     text-align: center;
     background-color: $color-box1;
     padding-top: $padding;
+    font-size: 1.5em;
+     
 }
 .box--2{
-    text-align: center;
+    text-align: center ;
     padding-top: $padding;
     background:  rgb(245, 239, 231);
+    font-size: 1.5em;
 }
 .box--3 {
     text-align: center;
     background: rgb(212, 212, 240);
     padding-top: $padding;
+    font-size: 1.5em;
 }
 .box--4{
     text-align: center;
     background: rgb(245, 239, 231);
     padding-top: $padding;
-}
-.container 
-{
-    display: flex;
-    justify-content: space-between;
+    font-size: 1.5em;
 }
 .footer
-{
+{ 
     display: flex;
     justify-content: space-between;
     background-color: $color-primary;
+    height: 50px;
+    
 } 
-h3
+.mentions , .contact 
+{  
+    &:hover{
+        transform: scale(1.1);
+        transition:transform 330ms ease-in-out;
+    }
+}
+
+aside h3
 {
     color: $color-titre;
-    background: $color-primary;
     text-align: center;
 }
-.mentions , .contact
+ul
 {
-    text-decoration: $color-titre;
+    list-style-type: none;
+    padding-left: 0px;
+}
+span
+{
+    color: $color-titre;
 }
