--- a/style.css
+++ b/style.css
@@ -1,29 +1,54 @@
 body {
   font-family: "Bellota", cursive, serif;
-  font-size: 2rem;
+  font-size: 1.1rem;
   width: 1100px;
   margin: auto;
 }
 
-article {
-  background-color: #fcddf7;
+.blocpage1 {
+  padding: 80px;
+  background-color: #fcd5f5;
   border: 1px solid #eeb7e7;
   box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.3);
-  margin-bottom: 20px;
+  margin-bottom: 30px;
+}
+
+.blocpage2 {
+  padding: 50px;
+  background: #fdf3ec;
+  border: 1px solid blanchedalmond;
+  box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.3);
+  margin-bottom: 30px;
+}
+
+#menu2 {
+  margin: 15px;
+  background: linear-gradient(brown, blue);
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
 }
 
 .blocpage3 {
-  background: #f4f4f7;
+  padding: 50px;
+  background: #eeeaee;
   border: 1px solid #dadaec;
   box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.3);
   margin-bottom: 30px;
 }
 
 .blocpage4 {
-  background: #e6e9ec;
+  padding: 30px;
+  background: white;
   border: 1px solid #ededf5;
   box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.3);
   margin-bottom: 30px;
+}
+
+.blocpage5 {
+  border: 1px solid #d4d4f0;
+  box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.3);
+  margin-bottom: 30px;
+  padding: 10px;
 }
 
 h1 {
@@ -31,42 +56,80 @@ h1 {
   background: #0e5532;
   text-align: center;
   height: 100px;
-  text-transform: 3rem;
-  padding-top: 0;
+  font-size: 3rem;
+  font-weight: bolder;
+  padding-top: 20px;
 }
 
 em {
-  padding-left: 100px;
-  padding-right: 100px;
+  font-weight: bold;
+  padding-left: 60px;
+  padding-right: 80px;
+}
+
+mark {
+  background: transparent;
+  font-size: 1.3rem;
+  font-weight: bolder;
+}
+
+.icon {
+  text-align: center;
 }
 
 i {
-  color: #c26a6a;
-  padding-left: 400px;
+  background: linear-gradient(90deg, #ef465f, #f6916a);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 strong {
   font-size: 3rem;
+  padding-left: 200px;
 }
 
 h2 {
+  font-size: 3.5rem;
   text-align: center;
-}
-
-section {
-  background: linear-gradient(red, blue);
-  -webkit-text-fill-color: transparent;
-  -webkit-background-clip: text;
-  border: 1px solid blanchedalmond;
-  box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.3);
-  margin-bottom: 30px;
 }
 
 h3 {
+  font-size: 4rem;
   text-align: center;
-  background: linear-gradient(red, blue);
+  background: linear-gradient(brown, blue);
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
+}
+
+h4 {
+  font-size: 1.5rem;
+  text-align: center;
+  color: #eeee09;
+}
+
+h5 {
+  color: blue;
+  text-align: center;
+  font-size: 4rem;
+}
+
+h6 {
+  background: linear-gradient(#04e982, #09743e);
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
+  text-align: center;
+  font-size: 4rem;
+}
+
+.btn {
+  color: #eeee09;
+  background: #0e5532;
+  width: 250px;
+  margin-left: 400px;
+  border: 1px solid #0e5532;
+  border-radius: 5% 5% 5% 5%;
+  margin-bottom: 20px;
+  font-size: 2rem;
 }
 
 .element {
@@ -74,7 +137,13 @@ h3 {
 }
 
 .text {
-  width: 900px;
+  width: 750px;
+  margin: 15px;
+}
+
+.prix {
+  margin-top: 15px;
+  margin-right: 20px;
 }
 
 .container {
@@ -87,70 +156,137 @@ a {
   text-decoration: none;
 }
 
-.box {
-  border: 1px solid #f4f4f7;
-  width: 300px;
-  height: 300px;
+.box--1 {
+  border: 1px solid #d4d4f0;
+  font-size: 3.5rem;
+  text-align: center;
+  width: 400px;
+  height: 400px;
+  padding-top: 20%;
+  background: #eeb7e7;
   box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.3);
   margin: 3%;
 }
-.box:hover {
+.box--1:hover {
   transform: scale(1.2);
   transition: transform 330ms ease-in-out;
 }
 
-.box--1 {
-  text-align: center;
-  background-color: #eeb7e7;
-  padding-top: 15%;
-  font-size: 1.5em;
-}
-
 .box--2 {
+  border: 1px solid #f4f4f7;
+  font-size: 3.5rem;
   text-align: center;
-  padding-top: 15%;
+  width: 400px;
+  height: 400px;
+  padding-top: 20%;
   background: #f5efe7;
-  font-size: 1.5em;
+  background: linear-gradient(red, blue);
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
+  box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.3);
+  margin: 3%;
+}
+.box--2:hover {
+  transform: scale(1.2);
+  transition: transform 330ms ease-in-out;
 }
 
 .box--3 {
+  color: blue;
+  border: 1px solid #d4d4f0;
+  font-size: 3.5rem;
   text-align: center;
+  width: 400px;
+  height: 400px;
+  padding-top: 20%;
   background: #d4d4f0;
-  padding-top: 15%;
-  font-size: 1.5em;
+  box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.3);
+  margin: 3%;
+}
+.box--3:hover {
+  transform: scale(1.2);
+  transition: transform 330ms ease-in-out;
 }
 
 .box--4 {
+  color: #56a808;
+  border: 1px solid #d4d4f0;
+  font-size: 3.5rem;
   text-align: center;
+  width: 400px;
+  height: 400px;
+  padding-top: 20%;
   background: #f5efe7;
-  padding-top: 15%;
-  font-size: 1.5em;
+  box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.3);
+  margin: 3%;
+}
+.box--4:hover {
+  transform: scale(1.2);
+  transition: transform 330ms ease-in-out;
 }
 
 .footer {
   display: flex;
   justify-content: space-between;
   background-color: #0e5532;
-  height: 50px;
+  height: 70px;
+  margin-bottom: 20px;
 }
 
-.mentions:hover, .contact:hover {
+.mentions, .contact, .pageprincipale {
+  margin: 10px;
+}
+.mentions:hover, .contact:hover, .pageprincipale:hover {
   transform: scale(1.1);
   transition: transform 330ms ease-in-out;
 }
 
-aside h3 {
-  color: #eeee09;
-  text-align: center;
-}
-
-ul {
-  list-style-type: none;
-  padding-left: 0px;
-}
-
 span {
+  font-size: 1.8rem;
   color: #eeee09;
+}
+
+@media screen and (max-width: 900px) {
+  body {
+    margin: 0;
+    width: auto;
+    font-size: 1rem;
+  }
+
+  .box--1, .box--2, .box--3, .box--4 {
+    width: 400px;
+    height: 150px;
+    font-size: 2rem;
+    padding-top: 15px;
+    margin-bottom: 10%;
+    text-align: center;
+  }
+  .box--1:hover, .box--2:hover, .box--3:hover, .box--4:hover {
+    transform: scaleX(1.2);
+    transition: transform 330ms ease-in-out;
+  }
+  .box--1 .blocpage1, .box--1 .blocpage2, .box--1 .blocpage3, .box--1 .blocpage4, .box--1 .blocpage5, .box--2 .blocpage1, .box--2 .blocpage2, .box--2 .blocpage3, .box--2 .blocpage4, .box--2 .blocpage5, .box--3 .blocpage1, .box--3 .blocpage2, .box--3 .blocpage3, .box--3 .blocpage4, .box--3 .blocpage5, .box--4 .blocpage1, .box--4 .blocpage2, .box--4 .blocpage3, .box--4 .blocpage4, .box--4 .blocpage5 {
+    margin-left: 0;
+    font-size: 0.8rem;
+  }
+  .box--1 h2, .box--1 h3, .box--1 h4, .box--1 h5, .box--1 h6, .box--2 h2, .box--2 h3, .box--2 h4, .box--2 h5, .box--2 h6, .box--3 h2, .box--3 h3, .box--3 h4, .box--3 h5, .box--3 h6, .box--4 h2, .box--4 h3, .box--4 h4, .box--4 h5, .box--4 h6 {
+    width: auto;
+    font-size: 1rem;
+    text-align: center;
+  }
+  .box--1 .text, .box--2 .text, .box--3 .text, .box--4 .text {
+    max-width: 250px;
+    margin: 0px;
+  }
+  .box--1 .prix, .box--2 .prix, .box--3 .prix, .box--4 .prix {
+    margin: 5px;
+  }
+  .box--1 .image, .box--2 .image, .box--3 .image, .box--4 .image {
+    display: none;
+  }
+  .box--1 span, .box--2 span, .box--3 span, .box--4 span {
+    font-size: 0.9rem;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
