--- a/style.scss
+++ b/style.scss
@@ -2,36 +2,65 @@ $color-primary: rgb(14, 85, 50) ;
 $color-titre : rgb(238, 238, 9) ;
 $color-box1 : rgb(238, 183, 231) ;
 $width :100px;
-$padding:15%;
+$padding:20%;
 $box-shadow:5px 5px 5px 5px rgb(0 ,0 ,0 ,0.3);
+$color-box3: rgb(212, 212, 240);
+$color-box4: rgb(245, 239, 231);
 
 body
 {
     font-family: 'Bellota', cursive, serif;
-    font-size: 2rem;
+    font-size: 1.1rem;
     width: 1100px;
     margin: auto;
 }
-article 
+.blocpage1
 {
-    background-color: rgb(252, 221, 247);
+    padding: 80px;
+    background-color: rgb(252, 213, 245);
     border: 1px solid rgb(238, 183, 231);
     box-shadow: $box-shadow ;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
+}
+
+.blocpage2
+{
+    padding: 50px;
+    background: rgb(253, 243, 236);
+    border: 1px solid blanchedalmond;
+    box-shadow: 5px 5px 5px 5px rgb(0 ,0 ,0 ,0.3);
+    margin-bottom: 30px;
+}
+
+#menu2
+{
+    margin: 15px;
+    background: linear-gradient( brown, blue);
+    -webkit-text-fill-color : transparent;
+    -webkit-background-clip: text;
 }
 .blocpage3
 {
-    background: rgb(244, 244, 247);
+    padding: 50px;
+    background: rgb(238, 234, 238);
     border: 1px solid rgb(218, 218, 236);
     box-shadow: $box-shadow;
     margin-bottom: 30px ;
 }
 .blocpage4
 {
-    background: rgb(230, 233, 236);
+    padding: 30px;
+    background: rgb(255, 255, 255);
     border: 1px solid rgb(237, 237, 245);
     box-shadow: $box-shadow;
     margin-bottom: 30px;
+}
+.blocpage5
+{
+    border: 1px solid rgb(212, 212, 240);
+    box-shadow: $box-shadow;
+    margin-bottom:30px ;
+    padding: 10px;
 }
 h1
 {
@@ -39,42 +68,79 @@ h1
     background: $color-primary;
     text-align: center;
     height: $width;
-    text-transform: 3rem;
-    padding-top: 0;
+    font-size: 3rem;
+    font-weight: bolder;
+    padding-top: 20px;
 }
 em
 {
-  padding-left: 100px;
-  padding-right: 100px;  
+   font-weight: bold;
+  padding-left: 60px;
+  padding-right: 80px;  
 }
-i
+mark
 {
-    color: rgb(194, 106, 106);
-    padding-left: 400px;
+    background: transparent;
+    font-size: 1.3rem;
+    font-weight: bolder;
+}
+.icon
+{
+    text-align: center;
+}
+i {
+    background: linear-gradient(90deg, #ef465f, #f6916a);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 strong
 {
     font-size: 3rem;
+    padding-left: 200px;
 }
 h2
 {
+    font-size: 3.5rem;
     text-align: center;
-}
-section 
-{
-    background: linear-gradient(red , blue);
-    -webkit-text-fill-color : transparent;
-    -webkit-background-clip: text;
-    border: 1px solid blanchedalmond;
-    box-shadow: 5px 5px 5px 5px rgb(0 ,0 ,0 ,0.3);
-    margin-bottom: 30px;
 }
 h3
 {
+    font-size: 4rem;
     text-align: center;
-    background: linear-gradient(red , blue);
+    background: linear-gradient(brown , blue);
     -webkit-text-fill-color : transparent;
     -webkit-background-clip: text;
+}
+h4
+{
+    font-size: 1.5rem;
+    text-align: center;
+    color: $color-titre;
+}
+h5
+{
+    color: blue;
+    text-align: center;
+    font-size: 4rem;
+}
+h6
+{
+    background: linear-gradient(rgb(4, 233, 130) , rgb(9, 116, 62));
+    -webkit-text-fill-color : transparent;
+    -webkit-background-clip: text;
+    text-align: center;
+    font-size: 4rem;
+}
+.btn
+{
+    color: $color-titre;
+    background: $color-primary;
+    width: 250px;
+    margin-left: 400px;
+    border: 1px solid $color-primary;
+    border-radius: 5% 5% 5% 5%;
+    margin-bottom: 20px;
+    font-size: 2rem;
 }
 .element
 {
@@ -82,7 +148,13 @@ h3
 }
 .text 
 {
-    width: 900px;
+    width: 750px;
+    margin: 15px;
+}
+.prix
+{
+    margin-top: 15px;
+    margin-right: 20px;
 }
 .container 
 {
@@ -94,11 +166,36 @@ a
 {
     text-decoration: none;
 }
-.box
+
+.box--1
+{
+    border: 1px solid rgb(212, 212, 240);
+    font-size: 3.5rem;
+    text-align: center;
+    width: 400px;
+    height: 400px;
+    padding-top: $padding;
+    background: $color-box1;
+    box-shadow: $box-shadow;
+    margin: 3%;
+    &:hover{
+        transform: scale(1.2);
+        transition: transform 330ms ease-in-out;
+    }
+
+}
+.box--2
 {
     border: 1px solid rgb(244, 244, 247);
-    width: 300px;
-    height: 300px;
+    font-size: 3.5rem;
+    text-align: center;
+    width: 400px;
+    height: 400px;
+    padding-top: $padding;
+    background:  rgb(245, 239, 231);
+    background: linear-gradient( red , blue);
+    -webkit-text-fill-color : transparent;
+    -webkit-background-clip: text;
     box-shadow: 5px 5px 5px 5px rgba(0.3, 0.3, 0.3, 0.3) ;
     margin: 3%;
     &:hover{
@@ -106,58 +203,103 @@ a
         transition: transform 330ms ease-in-out;
     }
 }
-.box--1 {
+.box--3
+{
+    color: blue;
+    border: 1px solid rgb(212, 212, 240);
+    font-size: 3.5rem;
     text-align: center;
-    background-color: $color-box1;
+    width: 400px;
+    height: 400px;
     padding-top: $padding;
-    font-size: 1.5em;
-     
+    background: $color-box3;
+    box-shadow: $box-shadow;
+    margin: 3%;
+    &:hover{
+        transform: scale(1.2);
+        transition: transform 330ms ease-in-out;
+    }
+
 }
-.box--2{
-    text-align: center ;
-    padding-top: $padding;
-    background:  rgb(245, 239, 231);
-    font-size: 1.5em;
-}
-.box--3 {
+.box--4
+{
+    color: rgb(86, 168, 8);
+    border: 1px solid rgb(212, 212, 240);
+    font-size: 3.5rem;
     text-align: center;
-    background: rgb(212, 212, 240);
+    width: 400px;
+    height: 400px;
     padding-top: $padding;
-    font-size: 1.5em;
-}
-.box--4{
-    text-align: center;
-    background: rgb(245, 239, 231);
-    padding-top: $padding;
-    font-size: 1.5em;
+    background: $color-box4;
+    box-shadow: $box-shadow;
+    margin: 3%;
+    &:hover{
+        transform: scale(1.2);
+        transition: transform 330ms ease-in-out;
+    }
+
 }
 .footer
 { 
     display: flex;
     justify-content: space-between;
     background-color: $color-primary;
-    height: 50px;
+    height: 70px;
+    margin-bottom: 20px;
     
 } 
-.mentions , .contact 
+.mentions , .contact , .pageprincipale
 {  
+    margin: 10px;
     &:hover{
         transform: scale(1.1);
         transition:transform 330ms ease-in-out;
     }
 }
-
-aside h3
-{
-    color: $color-titre;
-    text-align: center;
-}
-ul
-{
-    list-style-type: none;
-    padding-left: 0px;
-}
 span
 {
+    font-size: 1.8rem;
     color: $color-titre;
+}
+@media screen and(max-width:900px){
+    body{
+        margin:0;
+        width: auto;
+        font-size: 1rem;
+    }
+    .box--1 ,.box--2,.box--3,.box--4{
+        width: 400px;
+        height: 150px;
+        font-size: 2rem;
+        padding-top: 15px;
+        margin-bottom: 10%;
+        text-align: center;
+        &:hover{
+            transform: scaleX(1.2);
+            transition: transform 330ms ease-in-out;
+        }
+        .blocpage1 , .blocpage2,.blocpage3,.blocpage4,.blocpage5{
+            margin-left: 0;
+            font-size: 0.8rem;
+        }
+        h2, h3 , h4, h5, h6{
+            width: auto;
+            font-size: 1rem;
+            text-align: center;
+        }
+        .text{
+            max-width: 250px;
+            margin: 0px;
+        }
+        .prix{
+            margin: 5px;
+        }
+        .image
+        {
+            display: none;
+        }
+        span{
+            font-size: 0.9rem;
+        }
+    }
 }
