--- a/style.scss
+++ b/style.scss
@@ -156,88 +156,52 @@ h6
     margin-top: 15px;
     margin-right: 20px;
 }
-.container 
+
+.container
 {
     display: flex;
+    justify-content: space-around;
+    max-width: 1000px;
+    margin: auto;
     flex-wrap: wrap;
-    justify-content: space-between;
-}
-a
-{
-    text-decoration: none;
+    background-color:#fff;
 }
 
-.box--1
-{
-    border: 1px solid rgb(212, 212, 240);
-    font-size: 3.5rem;
-    text-align: center;
-    width: 400px;
+.box--1, .box--2, .box--3, .box--4{
     height: 400px;
-    padding-top: $padding;
-    background: $color-box1;
+    width: 100%;
+    max-width: 400px;
+    margin: 15px;
+    padding: 15px;
+    font-size: 3.5em;
     box-shadow: $box-shadow;
-    margin: 3%;
+    text-align: center;
     &:hover{
         transform: scale(1.2);
         transition: transform 330ms ease-in-out;
-    }
-
+    }   
 }
-.box--2
-{
-    border: 1px solid rgb(244, 244, 247);
-    font-size: 3.5rem;
-    text-align: center;
-    width: 400px;
-    height: 400px;
-    padding-top: $padding;
+
+.box--1 {
+    background:$color-box1;
+}
+
+.box--2{
     background:  rgb(245, 239, 231);
     background: linear-gradient( red , blue);
     -webkit-text-fill-color : transparent;
     -webkit-background-clip: text;
-    box-shadow: 5px 5px 5px 5px rgba(0.3, 0.3, 0.3, 0.3) ;
-    margin: 3%;
-    &:hover{
-        transform: scale(1.2);
-        transition: transform 330ms ease-in-out;
-    }
 }
-.box--3
-{
-    color: blue;
-    border: 1px solid rgb(212, 212, 240);
-    font-size: 3.5rem;
-    text-align: center;
-    width: 400px;
-    height: 400px;
-    padding-top: $padding;
-    background: $color-box3;
-    box-shadow: $box-shadow;
-    margin: 3%;
-    &:hover{
-        transform: scale(1.2);
-        transition: transform 330ms ease-in-out;
-    }
 
+.box--3{
+    background:$color-box3;
 }
-.box--4
-{
-    color: rgb(86, 168, 8);
-    border: 1px solid rgb(212, 212, 240);
-    font-size: 3.5rem;
-    text-align: center;
-    width: 400px;
-    height: 400px;
-    padding-top: $padding;
+.box--4{
     background: $color-box4;
-    box-shadow: $box-shadow;
-    margin: 3%;
-    &:hover{
-        transform: scale(1.2);
-        transition: transform 330ms ease-in-out;
-    }
-
+}
+a
+{
+    text-decoration: none;
 }
 .footer
 { 
@@ -264,42 +228,60 @@ span
 @media screen and(max-width:900px){
     body{
         margin:0;
-        width: auto;
+        width: 100%;
         font-size: 1rem;
     }
+    .container{
+        display: block;
+    }
     .box--1 ,.box--2,.box--3,.box--4{
-        width: 400px;
-        height: 150px;
+        width:auto;
+        max-height:300px ;
+        height: 100%;
         font-size: 2rem;
-        padding-top: 15px;
-        margin-bottom: 10%;
+        margin: 10px;
+        padding: 10px;
         text-align: center;
         &:hover{
             transform: scaleX(1.2);
             transition: transform 330ms ease-in-out;
         }
-        .blocpage1 , .blocpage2,.blocpage3,.blocpage4,.blocpage5{
-            margin-left: 0;
-            font-size: 0.8rem;
-        }
-        h2, h3 , h4, h5, h6{
+    }
+    .blocpage1 , .blocpage2,.blocpage3,.blocpage4,.blocpage5{
+        padding: 10px;
+           margin: 0;
+        font-size: 0.8rem; 
+           }
+    h2, h3 , h4, h5, h6{
             width: auto;
-            font-size: 1rem;
+            font-size: 1.3rem;
             text-align: center;
+        }  
+    .text{
+           width: 100%;
+            margin: 10px;
         }
-        .text{
-            max-width: 250px;
-            margin: 0px;
+    .prix{
+            margin: 10px;
         }
-        .prix{
-            margin: 5px;
-        }
-        .image
+    img
         {
             display: none;
+        } 
+     span{
+            padding: 0px;
+            font-size: 1rem;
         }
-        span{
-            font-size: 0.9rem;
-        }
+    .btn
+    {
+        display: none;
+    }
+    em{
+        font-size: 1rem;
+        font-weight: bold;
+    }
+    strong {
+        padding-left: 10px;
+        font-size: 1.5rem;
     }
 }
