--- a/style.scss
+++ b/style.scss
@@ -153,12 +153,11 @@ p
 .text 
 {
     width: 750px;
-    margin: 15px;
+    margin-bottom: 10px;
 }
 .prix
 {
-    margin-top: 15px;
-    margin-right: 20px;
+    margin: 10px;
 }
 
 .container
@@ -183,6 +182,7 @@ p
     }   
 }
 .box--1 {
+    color: black;
     background:$color-box1;
 }
 
@@ -194,9 +194,11 @@ p
 }
 
 .box--3{
+    color: blue;
     background:$color-box3;
 }
 .box--4{
+    color: green ;
     background: $color-box4;
 }
 a
