--- a/style.css
+++ b/style.css
@@ -21,11 +21,17 @@ body {
   margin-bottom: 30px;
 }
 
-#menu2 {
-  margin: 15px;
-  background: linear-gradient(brown, blue);
-  -webkit-text-fill-color: transparent;
-  -webkit-background-clip: text;
+.menu1 {
+  margin: 5px;
+  color: indianred;
+}
+
+.menu2 {
+  color: indigo;
+}
+
+.menu3 {
+  color: blue;
 }
 
 .blocpage3 {
@@ -61,25 +67,42 @@ h1 {
   padding-top: 20px;
 }
 
-section h2 {
-  display: inline-block;
+.btn {
+  content: ".";
+  animation: btn 1.2s steps(5, end) infinite;
+}
+
+@keyframes btn {
+  20% {
+    color: rgba(0, 0, 0, 0);
+    text-shadow: 0.25em 0 0 rgba(0, 0, 0, 0), 0.5em 0 0 rgba(0, 0, 0, 0);
+  }
+  40% {
+    color: #FFCA28;
+    text-shadow: 0.25em 0 0 rgba(0, 0, 0, 0), 0.5em 0 0 rgba(0, 0, 0, 0);
+  }
+  60% {
+    text-shadow: 0.25em 0 0 #FFCA28, 0.5em 0 0 rgba(0, 0, 0, 0);
+  }
+  100% {
+    text-shadow: 0.25em 0 0 #FFCA28, 0.5em 0 0 #FFCA28;
+  }
+}
+.box--5 {
   text-align: center;
-  color: #FDCB46;
-  font-size: 2.5vw;
   margin: auto;
-  transform: scale(1.1);
 }
 
 em {
-  font-weight: bolder;
-  padding-left: 50px;
-  padding-right: 80px;
-}
-
-mark {
-  background: transparent;
-  font-size: 1.3rem;
-  font-weight: bolder;
+  color: #eeee09;
+  display: inline-block;
+  text-align: center;
+  color: #eeee09;
+  background: #0e5532;
+  font-size: 2rem;
+  border-radius: 5% 5% 5% 5%;
+  padding: 30px;
+  margin: 30px;
 }
 
 .icon {
@@ -92,20 +115,15 @@ i {
   -webkit-text-fill-color: transparent;
 }
 
-strong {
-  font-size: 3rem;
-  padding-left: 200px;
-}
-
 h2 {
-  font-size: 3.5rem;
   text-align: center;
+  font-size: 3.5rem;
 }
 
 h3 {
   font-size: 4rem;
   text-align: center;
-  background: linear-gradient(brown, blue);
+  background: -webkit-linear-gradient(0deg, #cc6410 0% 30%, #a45be9, blue);
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
 }
@@ -136,6 +154,7 @@ p {
 
 .note1, .note2 {
   margin: 70px;
+  font-weight: bold;
   font-size: 1.5rem;
   display: inline-block;
   position: relative;
@@ -190,12 +209,31 @@ p {
 
 .chic1 {
   font-weight: bold;
+  color: indianred;
+  font-size: 1.3rem;
+  display: inline-block;
+  position: relative;
 }
-.chic1:hover {
-  border-bottom: 2px solid brown;
+.chic1::before {
+  content: "";
+  position: absolute;
+  transform: scaleX(0);
+  width: 100%;
+  bottom: 0;
+  left: 0;
+  height: 2px;
+  background: indianred;
+  transform-origin: bottom right;
+  transition: transform 1000ms ease-in-out;
+}
+
+.chic1:hover::before {
+  transform: scaleX(1);
+  transform-origin: bottom left;
 }
 
 .chic2 {
+  color: indigo;
   margin: 30px;
   font-size: 1.3rem;
   font-weight: bold;
@@ -221,8 +259,8 @@ p {
 }
 
 .chic3 {
-  margin: 30px;
   color: blue;
+  margin: 30px;
   font-weight: bold;
   display: inline-block;
   position: relative;
@@ -243,6 +281,14 @@ p {
 .chic3:hover::before {
   transform: scaleX(1);
   transform-origin: bottom left;
+}
+
+.delice2 {
+  margin: 20px;
+}
+
+.delice3 {
+  margin: 30px;
 }
 
 .delice1, .delice2, .delice3 {
@@ -384,12 +430,11 @@ a {
   display: flex;
   justify-content: space-between;
   background-color: #0e5532;
-  height: 70px;
   margin-bottom: 20px;
 }
 
 .footer a {
-  color: #FDCB46;
+  color: #eeee09;
   font-size: 1.8rem;
   text-decoration: none;
   margin: 10px;
@@ -434,25 +479,6 @@ a {
 
   img {
     display: none;
-  }
-
-  span {
-    padding: 0px;
-    font-size: 1rem;
-  }
-
-  .btn {
-    display: none;
-  }
-
-  em {
-    font-size: 1rem;
-    font-weight: bold;
-  }
-
-  strong {
-    padding-left: 10px;
-    font-size: 1.5rem;
   }
 }
 
