--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
 }
 
 .blocpage1 {
-  padding: 80px;
+  padding: 60px;
   background-color: #fcd5f5;
   border: 1px solid #eeb7e7;
   box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.3);
@@ -153,7 +153,9 @@ p {
 }
 
 .note1, .note2 {
-  margin: 70px;
+  margin-bottom: 20px;
+  margin-left: 70px;
+  margin-right: 70px;
   font-weight: bold;
   font-size: 1.5rem;
   display: inline-block;
@@ -183,7 +185,9 @@ p {
 }
 
 .note3 {
-  margin: 30px;
+  margin-bottom: 20px;
+  margin-left: 30px;
+  margin-right: 30px;
   font-weight: bold;
   font-size: 1.5rem;
   display: inline-block;
@@ -208,6 +212,7 @@ p {
 }
 
 .chic1 {
+  margin-bottom: 30px;
   font-weight: bold;
   color: indianred;
   font-size: 1.3rem;
@@ -259,6 +264,7 @@ p {
 }
 
 .chic3 {
+  font-size: 1.3rem;
   color: blue;
   margin: 30px;
   font-weight: bold;
@@ -283,12 +289,16 @@ p {
   transform-origin: bottom left;
 }
 
+.delice1 {
+  margin-bottom: 20px;
+}
+
 .delice2 {
   margin: 20px;
 }
 
 .delice3 {
-  margin: 30px;
+  margin: 20px;
 }
 
 .delice1, .delice2, .delice3 {
@@ -326,9 +336,14 @@ p {
 
 .gout1 {
   margin: 40px;
+  margin-bottom: 10px;
 }
 
 .gout2 {
+  margin: 10px;
+}
+
+.gout3 {
   margin: 10px;
 }
 
@@ -479,6 +494,23 @@ a {
 
   img {
     display: none;
+  }
+
+  .footer a {
+    font-size: 1rem;
+  }
+
+  .chic1 {
+    margin-top: 20px;
+    margin-left: 30px;
+  }
+
+  .delice1 {
+    margin-left: 20px;
+  }
+
+  .gout2, .gout3 {
+    margin-left: 30px;
   }
 }
 
