--- a/style.scss
+++ b/style.scss
@@ -2,11 +2,23 @@ $color-primary: rgb(14, 85, 50) ;
 $color-titre : rgb(238, 238, 9) ;
 $color-box1 : rgb(238, 183, 231) ;
 $width :100px;
-$padding:20%;
 $box-shadow:5px 5px 5px 5px rgb(0 ,0 ,0 ,0.3);
 $color-box3: rgb(212, 212, 240);
 $color-box4: rgb(245, 239, 231);
-
+@mixin page {
+    box-shadow: $box-shadow;
+    margin-bottom: 30px;
+}
+@mixin content {
+             position: absolute;
+             transform: scaleX(0);
+             width: 100%;
+             bottom: 0;
+             left: 0;
+             height: 2px;
+             transform-origin: bottom right;
+             transition: transform 1000ms ease-in-out;
+}
 body
 {
     font-family: 'Bellota', cursive, serif;
@@ -14,13 +26,112 @@ body
     width: 1100px;
     margin: auto;
 }
+.container
+{
+    display: flex;
+    justify-content: space-evenly;
+    max-width: 1000px;
+    margin: auto;
+    flex-wrap: wrap;
+}
+.box{
+    width: 100%;
+    max-width: 400px;
+    margin: 15px;
+    padding: 15px;
+    font-size: 3.5em;
+    box-shadow: $box-shadow;
+    text-align: center;
+     &:hover{
+        transform: scale(1.2);
+        transition: transform 330ms ease-in-out;
+    }   
+}
+.box--1 {
+    color: black;
+    background:$color-box1;
+}
+
+.box--2{
+    background:  rgb(245, 239, 231);
+    background: linear-gradient( brown , blue);
+    -webkit-text-fill-color : transparent;
+    -webkit-background-clip: text;
+}
+
+.box--3{
+    color: blue;
+    background:$color-box3;
+}
+.box--4{
+    color: green;
+    background: $color-box4;
+}
+a
+{
+    text-decoration: none;
+}
+.box--5{
+    text-align: center;
+    margin: auto;
+}
+em {
+    color: $color-titre;
+    display: inline-block;
+    text-align: center;
+    color: $color-titre;
+    background: $color-primary;
+    font-size: 2rem;
+    border-radius: 5% 5% 5% 5%;
+    padding: 30px;
+    margin: 30px;
+}
+.btn{
+    content: ".";
+    animation: btn 1.2s steps(5, end) infinite;
+}
+@keyframes btn {
+     20% {
+    color: rgba(0, 0, 0, 0);
+    text-shadow: 0.25em 0 0 rgba(0, 0, 0, 0), 0.5em 0 0 rgba(0, 0, 0, 0);
+}
+40% {
+    color: $color-titre;
+    text-shadow: 0.25em 0 0 rgba(0, 0, 0, 0), 0.5em 0 0 rgba(0, 0, 0, 0);
+}
+
+60% {
+    text-shadow: 0.25em 0 0 $color-titre, 0.5em 0 0 rgba(0, 0, 0, 0);
+}
+100% {
+    text-shadow: 0.25em 0 0 $color-titre, 0.5em 0 0 $color-titre;
+}
+}
+.footer
+{ 
+    display: flex;
+    justify-content: space-between;
+    background-color: $color-primary;
+    margin-bottom: 20px;
+    
+} 
+.footer a
+{  
+    color: $color-titre;
+    font-size: 1.8rem;
+    text-decoration: none;
+    margin: 10px;
+    &:hover{
+        transform: scale(1.2);
+        transition:transform 330ms ease-in-out;
+    }
+}
 .blocpage1
 {
     padding: 60px;
     background-color: rgb(252, 213, 245);
     border: 1px solid rgb(238, 183, 231);
-    box-shadow: $box-shadow ;
-    margin-bottom: 30px;
+    @include page;
 }
 
 .blocpage2
@@ -28,8 +139,7 @@ body
     padding: 30px;
     background: rgb(253, 243, 236);
     border: 1px solid blanchedalmond;
-    box-shadow: 5px 5px 5px 5px rgb(0 ,0 ,0 ,0.3);
-    margin-bottom: 30px;
+    
 }
 
 .menu1
@@ -48,23 +158,20 @@ body
     padding: 50px;
     background: rgb(238, 234, 238);
     border: 1px solid rgb(218, 218, 236);
-    box-shadow: $box-shadow;
-    margin-bottom: 30px ;
+    @include page;
 }
 .blocpage4
 {
     padding: 30px;
     background: rgb(255, 255, 255);
     border: 1px solid rgb(237, 237, 245);
-    box-shadow: $box-shadow;
-    margin-bottom: 30px;
+    @include page;
 }
 .blocpage5
 {
     border: 1px solid rgb(212, 212, 240);
-    box-shadow: $box-shadow;
-    margin-bottom:30px ;
     padding: 10px;
+    @include page;
 }
 h1
 {
@@ -75,46 +182,8 @@ h1
     font-size: 3rem;
     font-weight: bolder;
     padding-top: 20px;
-}
+}    
 
-
-.btn{
-    content: ".";
-    animation: btn 1.2s steps(5, end) infinite;
-}
-@keyframes btn {
-     20% {
-    color: rgba(0, 0, 0, 0);
-    text-shadow: 0.25em 0 0 rgba(0, 0, 0, 0), 0.5em 0 0 rgba(0, 0, 0, 0);
-}
-40% {
-    color: #FFCA28;
-    text-shadow: 0.25em 0 0 rgba(0, 0, 0, 0), 0.5em 0 0 rgba(0, 0, 0, 0);
-}
-
-60% {
-    text-shadow: 0.25em 0 0 #FFCA28, 0.5em 0 0 rgba(0, 0, 0, 0);
-}
-100% {
-    text-shadow: 0.25em 0 0 #FFCA28, 0.5em 0 0 #FFCA28;
-}
-}
-.box--5{
-    text-align: center;
-    margin: auto;
-}
-    
-em {
-        color: $color-titre;
-        display: inline-block;
-        text-align: center;
-        color: $color-titre;
-        background: $color-primary;
-        font-size: 2rem;
-        border-radius: 5% 5% 5% 5%;
-        padding: 30px;
-        margin: 30px;
-    }
 
 .icon
 {
@@ -171,16 +240,8 @@ p
     position: relative;
          &::before{
             content:'';
-             position: absolute;
-             transform: scaleX(0);
-             width: 100%;
-             bottom: 0;
-             left: 0;
-             height: 2px;
              background: black;
-             transform-origin: bottom right;
-             transition: transform 1000ms ease-in-out;
-    
+           @include content;
         }
     }
     .note1:hover::before{
@@ -201,15 +262,8 @@ p
     position: relative;
          &::before{
             content:'';
-             position: absolute;
-             transform: scaleX(0);
-             width: 100%;
-             bottom: 0;
-             left: 0;
-             height: 2px;
              background: black;
-             transform-origin: bottom right;
-             transition: transform 1000ms ease-in-out;
+             @include content;
     
         }
     }
@@ -227,16 +281,8 @@ p
     position: relative;
          &::before{
             content:'';
-             position: absolute;
-             transform: scaleX(0);
-             width: 100%;
-             bottom: 0;
-             left: 0;
-             height: 2px;
              background: indianred;
-             transform-origin: bottom right;
-             transition: transform 1000ms ease-in-out;
-    
+           @include content;
         }
     }
     .chic1:hover::before{
@@ -254,16 +300,8 @@ p
     position: relative;
          &::before{
             content:'';
-             position: absolute;
-             transform: scaleX(0);
-             width: 100%;
-             bottom: 0;
-             left: 0;
-             height: 2px;
              background: blueviolet;
-             transform-origin: bottom right;
-             transition: transform 1000ms ease-in-out;
-    
+             @include content;
         }
     }
     .chic2:hover::before{
@@ -280,16 +318,8 @@ p
     position: relative;
          &::before{
             content:'';
-             position: absolute;
-             transform: scaleX(0);
-             width: 100%;
-             bottom: 0;
-             left: 0;
-             height: 2px;
              background: blue;
-             transform-origin: bottom right;
-             transition: transform 1000ms ease-in-out;
-    
+             @include content;
         }
     }
     .chic3:hover::before{
@@ -311,16 +341,8 @@ p
         position: relative;
              &::before{
                 content:'';
-                 position: absolute;
-                 transform: scaleX(0);
-                 width: 100%;
-                 bottom: 0;
-                 left: 0;
-                 height: 2px;
                  background: blue;
-                 transform-origin: bottom right;
-                 transition: transform 1000ms ease-in-out;
-        
+               @include content;
             }
         }
     
@@ -354,16 +376,8 @@ p
         position: relative;
              &::before{
                 content:'';
-                 position: absolute;
-                 transform: scaleX(0);
-                 width: 100%;
-                 bottom: 0;
-                 left: 0;
-                 height: 2px;
                  background: greenyellow;
-                 transform-origin: bottom right;
-                 transition: transform 1000ms ease-in-out;
-        
+                @include content ;
             }
         }
     
@@ -394,71 +408,8 @@ p
 {
     margin: 10px;
 }
-.container
-{
-    display: flex;
-    justify-content: space-evenly;
-    max-width: 1000px;
-    margin: auto;
-    flex-wrap: wrap;
-}
-.box{
-    width: 100%;
-    max-width: 400px;
-    margin: 15px;
-    padding: 15px;
-    font-size: 3.5em;
-    box-shadow: $box-shadow;
-    text-align: center;
-     &:hover{
-        transform: scale(1.2);
-        transition: transform 330ms ease-in-out;
-    }   
-}
-.box--1 {
-    color: black;
-    background:$color-box1;
-}
 
-.box--2{
-    background:  rgb(245, 239, 231);
-    background: linear-gradient( brown , blue);
-    -webkit-text-fill-color : transparent;
-    -webkit-background-clip: text;
-}
 
-.box--3{
-    color: blue;
-    background:$color-box3;
-}
-.box--4{
-    color: green;
-    background: $color-box4;
-}
-
-a
-{
-    text-decoration: none;
-}
-.footer
-{ 
-    display: flex;
-    justify-content: space-between;
-    background-color: $color-primary;
-    margin-bottom: 20px;
-    
-} 
-.footer a
-{  
-    color: $color-titre;
-    font-size: 1.8rem;
-    text-decoration: none;
-    margin: 10px;
-    &:hover{
-        transform: scale(1.2);
-        transition:transform 330ms ease-in-out;
-    }
-}
 @media screen and(max-width:768px){
     body{
         margin: 0px;
