--- a/style.css
+++ b/style.css
@@ -48,7 +48,6 @@ body {
   background: #f5efe7;
 }
 .box--2 a {
-  transition: transform 0.4s ease-in-out 0s;
   background: -webkit-linear-gradient(0deg, #cc6410 0% 30%, #a45be9, blue);
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
@@ -126,27 +125,23 @@ footer a {
   margin: 10px;
 }
 footer a:hover {
-  animation: wiggle 1s infinite;
+  animation: shake 1s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
+  animation-iteration-count: infinite;
+  transform: translate3d(0, 0, 0);
 }
 
-@keyframes wiggle {
-  2% {
-    transform: rotate(0deg);
+@keyframes shake {
+  10%, 90% {
+    transform: translate(-1px, 0);
   }
-  4% {
-    transform: rotate(2deg);
+  20%, 80% {
+    transform: translate(2px, 0);
   }
-  6% {
-    transform: rotate(-2deg);
+  50%, 70% {
+    transform: translate(-4px, 0);
   }
-  8% {
-    transform: rotate(3deg);
-  }
-  10% {
-    transform: rotate(-3deg);
-  }
-  100% {
-    transform: rotate(0deg);
+  40%, 60% {
+    transform: translate(4px, 0);
   }
 }
 .blocpage1 {
@@ -254,7 +249,8 @@ h6 {
 }
 
 p {
-  margin-left: 50px;
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
 .note1, .note2 {
@@ -497,6 +493,7 @@ article {
 
   .chic1, .chic2, .chic3, .delice1, .delice2, .delice3, .gout1, .gout2, .gout3 {
     font-size: 1rem;
+    margin-bottom: 10px;
   }
 
   img {
@@ -513,6 +510,7 @@ article {
   .text {
     width: 100%;
     text-align: center;
+    margin: 0px;
   }
 
   .prix {
