--- a/style.css
+++ b/style.css
@@ -13,6 +13,10 @@ body {
   flex-wrap: wrap;
 }
 
+strong {
+  font-size: 2rem;
+}
+
 .box {
   width: 100%;
   max-width: 400px;
@@ -54,14 +58,14 @@ body {
 }
 
 .box--3 {
-  background: #d4d4f0;
+  background: #e4e4fa;
 }
 .box--3 a {
   color: blue;
 }
 
 .box--4 {
-  background: #f5efe7;
+  background: #fff;
 }
 .box--4 a {
   color: green;
@@ -82,7 +86,7 @@ em {
   display: inline-block;
   text-align: center;
   color: #eeee09;
-  background: #0e5532;
+  background: #4f9c85;
   font-size: 1.5rem;
   border-radius: 5% 5% 5% 5%;
   padding: 20px;
@@ -114,7 +118,7 @@ footer {
   position: sticky;
   display: flex;
   justify-content: space-between;
-  background-color: #0e5532;
+  background-color: #4f9c85;
   bottom: 0px;
 }
 
@@ -196,7 +200,7 @@ footer a:hover {
 
 h1 {
   color: #eeee09;
-  background: #0e5532;
+  background: #4f9c85;
   text-align: center;
   height: 100px;
   font-size: 3rem;
